Add alt to images

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
           <img
             src="https://imgur.com/JEsYtKN.png"
             sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px"
+            alt="شعار وكالة بكسل"
             class="logo"
           />
         </a>
@@ -112,7 +113,7 @@
         <div class="w-layout-blockcontainer hero-text-container w-container">
           <img
             src="https://imgur.com/7TFBNLc.png"
-            alt=""
+            alt="شعار بكسل أبيض"
             class="white-pixel-img"
           />
           <h1 class="grating-word">حياك الله في بكســـل</h1>
@@ -140,7 +141,7 @@
         <img
           src="https://imgur.com/Zr73eZa.png"
           loading="lazy"
-          alt=""
+          alt="صورة توضيحية لخدمات التصميم الرقمي"
           class="hero-img"
         />
       </div>
@@ -161,6 +162,7 @@
         </div>
         <img
           src="https://imgur.com/MoahgS3.png"
+          alt="صورة توضيحية لرائد فضاء يتصفح"
           class="aboutus-img animate-from-left"
         />
       </div>
@@ -170,7 +172,7 @@
         <div class="w-layout-grid service-grid-card">
           <img
             src="images/service-images/papers.png"
-            alt=""
+            alt="أيقونة تصميم الهويات البصرية"
             class="service-img"
           />
           <div
@@ -204,7 +206,7 @@
         <div class="w-layout-grid service-grid-card">
           <img
             src="images/service-images/motion.png"
-            alt=""
+            alt="أيقونة الموشن جرافيك"
             class="service-img"
           />
           <div class="service-line-shape">
@@ -235,7 +237,7 @@
         <div class="w-layout-grid service-grid-card hide">
           <img
             src="images/service-images/advertising.png"
-            alt=""
+            alt="أيقونة حملات السوشال ميديا"
             class="service-img"
           />
           <div class="service-line-shape">
@@ -266,7 +268,7 @@
         <div class="w-layout-grid service-grid-card">
           <img
             src="images/service-images/conferences.png"
-            alt=""
+            alt="أيقونة المعارض والمؤتمرات"
             class="service-img"
           />
           <div class="service-line-shape">
@@ -295,7 +297,7 @@
         <div class="w-layout-grid service-grid-card">
           <img
             src="images/service-images/sites.png"
-            alt=""
+            alt="أيقونة تطوير المواقع والتطبيقات"
             class="service-img"
           />
           <div class="service-line-shape">
@@ -326,7 +328,7 @@
         <div class="w-layout-grid service-grid-card hide">
           <img
             src="images/service-images/couch-bagging.png"
-            alt=""
+            alt="أيقونة الحقائب التدريبية"
             class="service-img"
           />
           <div class="service-line-shape">
@@ -357,7 +359,7 @@
         <div class="w-layout-grid service-grid-card last-element-right hide">
           <img
             src="images/service-images/printing.png"
-            alt=""
+            alt="أيقونة المطبوعات الإعلانية"
             class="service-img"
           />
           <div class="service-line-shape">
@@ -389,7 +391,7 @@
         <div class="w-layout-grid service-grid-card last-element hide">
           <img
             src="images/service-images/markiting.png"
-            alt=""
+            alt="أيقونة التسويق الإلكتروني"
             class="service-img"
           />
           <div class="service-line-shape">
@@ -435,7 +437,7 @@
               <div class="service-company-contairner">
                 <img
                   src="https://imgur.com/8OmicuT.png"
-                  alt=""
+                  alt="شعار شريك النجاح"
                   class="srvice-company-image"
                 />
               </div>
@@ -548,6 +550,7 @@
               >
                 <img
                   src="images/social-media/heaadphones.png"
+                  alt="أيقونة خدمة العملاء - سماعات رأس"
                   class="whatsup-img"
                 />
                 <div>
@@ -561,6 +564,7 @@
                 <a href="https://wa.me/967774769410" class="w-inline-block">
                   <img
                     src="images/social-media/whatsapp.png"
+                    alt="واتساب"
                     class="socialmedia-img"
                   />
                 </a>
@@ -570,14 +574,14 @@
                 >
                   <img
                     src="images/social-media/instgram.png"
-                    alt=""
+                    alt="إنستغرام"
                     class="socialmedia-img"
                   />
                 </a>
                 <a href="#" class="w-inline-block">
                   <img
                     src="images/social-media/facebook.png"
-                    alt=""
+                    alt="فيسبوك"
                     class="socialmedia-img"
                   />
                 </a>
@@ -588,7 +592,7 @@
                   <img
                     src="images/social-media/x.png"
                     loading="lazy"
-                    alt=""
+                    alt="تويتر X"
                     class="socialmedia-img x-logo"
                   />
                 </a>
