Fix imgur links

--- a/conference.html
+++ b/conference.html
@@ -24,8 +24,8 @@
             }
         }
     </script>
-    <link href="https://imgur.com/SilMupg.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://imgur.com/SilMupg.png" rel="apple-touch-icon" />
+    <link href="https://i.imgur.com/SilMupg.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://i.imgur.com/SilMupg.png" rel="apple-touch-icon" />
 </head>
 
 <body>
@@ -52,8 +52,8 @@
                 <div class="w-icon-nav-menu"><span></span></div>
             </div>
             <a href="index.html" class="brand w-nav-brand">
-                <img src="https://imgur.com/JEsYtKN.png"
-                    sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" class="logo" />
+                <img src="https://i.imgur.com/JEsYtKN.png"
+                    sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" alt="شعار وكالة بكسل" class="logo" />
             </a>
         </div>
     </div>
@@ -91,8 +91,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 0ms;">
                     <div class="aspect-[5/4] overflow-hidden"><img
-                            src="https://imgur.com/ZxFNuOY.png"
-                            alt="تصميم هوية العلامة التجارية"
+                            src="https://i.imgur.com/ZxFNuOY.png"
+                            alt="تصميم هوية العلامة التجارية للمعارض والمؤتمرات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -119,8 +119,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 100ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/liaejBC.png"
-                            alt="سلسلة الملصقات الإبداعية"
+                            src="https://i.imgur.com/liaejBC.png"
+                            alt="ملصقات إبداعية للمعارض والمؤتمرات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -146,8 +146,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 200ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/YZLeYdx.png"
-                            alt="مجموعة الفن الرقمي"
+                            src="https://i.imgur.com/YZLeYdx.png"
+                            alt="تصاميم فنية رقمية للمعارض"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -173,8 +173,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 300ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/26dost2.png"
-                            alt="تصميم العبوات"
+                            src="https://i.imgur.com/26dost2.png"
+                            alt="تصميم عبوات للمعارض والمؤتمرات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -200,8 +200,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 400ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/moTzfMM.png"
-                            alt="مجموعة الشعارات"
+                            src="https://i.imgur.com/moTzfMM.png"
+                            alt="شعارات للمعارض والمؤتمرات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -227,8 +227,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 500ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/AYA2jT0.png"
-                            alt="التصميم التحريري"
+                            src="https://i.imgur.com/AYA2jT0.png"
+                            alt="تصميم تحريري للمعارض والمؤتمرات"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
