--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="script.js"></script>
     <meta charset="utf-8" />
     <title>Pixel | بكسل - وكالة تصميم وتطوير رقمي</title>
+    <link rel="icon" href="https://i.imgur.com/SilMupg.png" type="image/png">
     <meta name="google-site-verification" content="lPPx_-pfyUuux1EPBbfyyoyYvO8S3-Vg4CgrhWNB_6k" />
     <meta name="description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
     <meta name="keywords" content="بكسل, تصميم, تسويق, وكالة, هوية بصرية, تسويق الكتروني, موشن جرافيك, تطوير مواقع, حملات اعلانية, branding, marketing, digital agency, pixel" />
@@ -10,30 +11,30 @@
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Pixel | بكسل - وكالة تصميم وتسويق رقمي" />
     <meta property="og:description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
-    <meta property="og:image" content="https://imgur.com/SilMupg.png" />
+    <meta property="og:image" content="https://i.imgur.com/SilMupg.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pixel23.xyz/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Pixel | بكسل - وكالة تصميم وتسويق رقمي" />
     <meta name="twitter:description" content="وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية." />
-    <meta name="twitter:image" content="https://imgur.com/SilMupg.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/SilMupg.png" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="canonical" href="https://pixel23.xyz/" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <link href="main.css" rel="stylesheet" type="text/css" />
     <link
-      href="https://imgur.com/SilMupg.png"
+      href="https://i.imgur.com/SilMupg.png"
       rel="shortcut icon"
       type="image/x-icon"
     />
-    <link href="https://imgur.com/SilMupg.png" rel="apple-touch-icon" />
+    <link href="https://i.imgur.com/SilMupg.png" rel="apple-touch-icon" />
     <!-- Preload partner logos to improve performance -->
-    <link rel="preload" href="https://imgur.com/8OmicuT.png" as="image" />
-    <link rel="preload" href="https://imgur.com/R5MFW4W.png" as="image" />
-    <link rel="preload" href="https://imgur.com/ZX7UwtH.png" as="image" />
-    <link rel="preload" href="https://imgur.com/TFfgwgx.png" as="image" />
-    <link rel="preload" href="https://imgur.com/RYd8r1w.png" as="image" />
-    <link rel="preload" href="https://imgur.com/zJG3jI0.png" as="image" />
+    <link rel="preload" href="https://i.imgur.com/8OmicuT.png" as="image" />
+    <link rel="preload" href="https://i.imgur.com/R5MFW4W.png" as="image" />
+    <link rel="preload" href="https://i.imgur.com/ZX7UwtH.png" as="image" />
+    <link rel="preload" href="https://i.imgur.com/TFfgwgx.png" as="image" />
+    <link rel="preload" href="https://i.imgur.com/RYd8r1w.png" as="image" />
+    <link rel="preload" href="https://i.imgur.com/zJG3jI0.png" as="image" />
     <!-- Schema.org JSON-LD for SEO -->
     <script type="application/ld+json">
       {
@@ -41,7 +42,7 @@
         "@type": "Organization",
         "name": "Pixel Agency | وكالة بكسل",
         "url": "https://pixel23.xyz/",
-        "logo": "https://imgur.com/SilMupg.png",
+        "logo": "https://i.imgur.com/SilMupg.png",
         "description": "وكالة بكسل: تصميم الهويات البصرية، التسويق الرقمي، تطوير المواقع، إدارة الحملات الإعلانية، الموشن جرافيك، خدمات احترافية لنجاح علامتك التجارية.",
         "sameAs": [
           "https://www.instagram.com/pixelagency23/",
@@ -100,7 +101,7 @@
         </div>
         <a href="#" class="brand w-nav-brand">
           <img
-            src="https://imgur.com/JEsYtKN.png"
+            src="https://i.imgur.com/JEsYtKN.png"
             sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px"
             alt="شعار وكالة بكسل"
             class="logo"
@@ -112,7 +113,7 @@
       <div class="w-layout-blockcontainer hero-container w-container">
         <div class="w-layout-blockcontainer hero-text-container w-container">
           <img
-            src="https://imgur.com/7TFBNLc.png"
+            src="https://i.imgur.com/7TFBNLc.png"
             alt="شعار بكسل أبيض"
             class="white-pixel-img"
           />
@@ -139,7 +140,7 @@
           </div>
         </div>
         <img
-          src="https://imgur.com/Zr73eZa.png"
+          src="https://i.imgur.com/Zr73eZa.png"
           loading="lazy"
           alt="صورة توضيحية لخدمات التصميم الرقمي"
           class="hero-img"
@@ -161,7 +162,7 @@
           </p>
         </div>
         <img
-          src="https://imgur.com/MoahgS3.png"
+          src="https://i.imgur.com/MoahgS3.png"
           alt="صورة توضيحية لرائد فضاء يتصفح"
           class="aboutus-img animate-from-left"
         />
@@ -436,7 +437,7 @@
               <!-- Loading indicator while JavaScript loads the content -->
               <div class="service-company-contairner">
                 <img
-                  src="https://imgur.com/8OmicuT.png"
+                  src="https://i.imgur.com/8OmicuT.png"
                   alt="شعار شريك النجاح"
                   class="srvice-company-image"
                 />
