--- a/graphic.html
+++ b/graphic.html
@@ -24,8 +24,8 @@
             }
         }
     </script>
-    <link href="https://imgur.com/SilMupg.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://imgur.com/SilMupg.png" rel="apple-touch-icon" />
+    <link href="https://i.imgur.com/SilMupg.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="https://i.imgur.com/SilMupg.png" rel="apple-touch-icon" />
 </head>
 
 <body>
@@ -52,8 +52,8 @@
                 <div class="w-icon-nav-menu"><span></span></div>
             </div>
             <a href="index.html" class="brand w-nav-brand">
-                <img src="https://imgur.com/JEsYtKN.png"
-                    sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" class="logo" />
+                <img src="https://i.imgur.com/JEsYtKN.png"
+                    sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" alt="شعار وكالة بكسل" class="logo" />
             </a>
         </div>
     </div>
@@ -91,8 +91,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 0ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/WE772Rc.png"
-                            alt="تصميم هوية العلامة التجارية"
+                            src="https://i.imgur.com/WE772Rc.png"
+                            alt="تصميم هوية علامة تجارية جرافيكي"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -119,8 +119,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 100ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/SsnK4ih.png"
-                            alt="سلسلة الملصقات الإبداعية"
+                            src="https://i.imgur.com/SsnK4ih.png"
+                            alt="ملصقات إبداعية جرافيكية"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -146,8 +146,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 200ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/WhB55LB.png"
-                            alt="مجموعة الفن الرقمي"
+                            src="https://i.imgur.com/WhB55LB.png"
+                            alt="فن رقمي جرافيكي معاصر"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -173,8 +173,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 300ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/uKI5YVa.png"
-                            alt="تصميم العبوات"
+                            src="https://i.imgur.com/uKI5YVa.png"
+                            alt="تصميم عبوات جرافيكية"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -200,8 +200,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 400ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/kmafboS.png"
-                            alt="مجموعة الشعارات"
+                            src="https://i.imgur.com/kmafboS.png"
+                            alt="مجموعة شعارات جرافيكية"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -227,8 +227,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 500ms;">
                     <div class="aspect-[4/3] overflow-hidden"><img
-                            src="https://imgur.com/64m42xu.png"
-                            alt="التصميم التحريري"
+                            src="https://i.imgur.com/64m42xu.png"
+                            alt="تصميم تحريري جرافيكي"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -255,8 +255,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 500ms;">
                     <div class="aspect-[4/5] overflow-hidden"><img
-                            src="https://imgur.com/QXWgGeX.png"
-                            alt="التصميم التحريري"
+                            src="https://i.imgur.com/QXWgGeX.png"
+                            alt="تصميم مجلة جرافيكي"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
@@ -282,8 +282,8 @@
                 <div class="group relative overflow-hidden rounded-2xl glass-effect hover:scale-105 transition-all duration-500 cursor-pointer"
                     style="animation-delay: 500ms;">
                     <div class="aspect-[4/5] overflow-hidden"><img
-                            src="https://imgur.com/ByoYpdq.png"
-                            alt="التصميم التحريري"
+                            src="https://i.imgur.com/ByoYpdq.png"
+                            alt="تصميم كتاب جرافيكي"
                             class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     </div>
                     <div
