--- a/motion.html
+++ b/motion.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="main.css" type="text/css" />
   <link rel="stylesheet" href="work_pages.css">
-  <link href="https://imgur.com/SilMupg.png" rel="shortcut icon" type="image/x-icon" />
-  <link href="https://imgur.com/SilMupg.png" rel="apple-touch-icon" />
+  <link href="https://i.imgur.com/SilMupg.png" rel="shortcut icon" type="image/x-icon" />
+  <link href="https://i.imgur.com/SilMupg.png" rel="apple-touch-icon" />
 </head>
 
 <body>
@@ -34,8 +34,8 @@
               <div class="w-icon-nav-menu"><span></span></div>
           </div>
           <a href="index.html" class="brand w-nav-brand">
-              <img src="https://imgur.com/JEsYtKN.png"
-                  sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" class="logo" />
+              <img src="https://i.imgur.com/JEsYtKN.png"
+                  sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" alt="شعار وكالة بكسل" class="logo" />
           </a>
       </div>
   </div>
