--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <h1 class="service-desc">
             تطوير المواقــــــــــع<br />والتطبيقـات الالكترونيـة
           </h1>
-          <a href="web.html" class="cssbuttons-io-button">
+          <a href="soon.html" class="cssbuttons-io-button">
             مشاهدة اعمالنا
             <div class="icon">
               <svg
